[project]
name = "stress"
version = "0.1.0"
description = ""
authors = [
    {name = "Shloyda Artem",email = "artemshloida@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "password-strength (>=0.0.3.post2,<0.0.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
